--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -7,6 +7,9 @@
     <title>Applytics</title>
 </head>
 <body>
-    <p>Hello world!</p>
+    <div class="container">
+        <h1 class="display-1">Hello world!</h1>
+    </div>
+    <script src="/js/main.js"></script>
 </body>
 </html>
