--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -1,45 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Applytics</title>
-    </head>
+<%- include('../layout/_header'); %>
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
-                <div>
-                    <a class="navbar-brand" href="#">Applytics</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                
-                <div>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Sign-up/Log-in</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+    <main role="main" class="container">
+        <h1>TESTE</h1>
+    </main>
 
-        <main role="main" class="container">
-            <h1>TESTE</h1>
-        </main>
-
-        <footer class="footer container-fluid">
-            
-        </footer>
-
-        <script src="/js/main.js"></script>
-    </body>
-</html>
+<%- include('../layout/_footer'); %>
