--- a/app/views/usuarios/login.ejs
+++ b/app/views/usuarios/login.ejs
@@ -1,8 +1,7 @@
 <%- include('../layout/_header'); %>
-
     <main role="main" class="container">
-        <h1>Cadastro</h1>
-        <form action="/usuarios" method="post">
+        <h1>Login</h1>
+        <form action="/usuarios/login" method="post">
             <%if(validationErrors) { %>
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <ul>
@@ -16,10 +15,6 @@
                 </div>
             <%}%>
             <div class="form-group">
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>">
-            </div>
-            <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
             </div>
@@ -27,12 +22,7 @@
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" class="form-control">
             </div>
-            <div class="form-group">
-                <label for="senha-confirm">Confirme a senha</label>
-                <input type="password" name="senha-confirm" id="senha-confirm" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <input type="submit" value="Entrar" class="btn btn-primary">
         </form>
     </main>
-
 <%- include('../layout/_footer'); %>
