--- a/app/views/usuarios/cadastro.ejs
+++ b/app/views/usuarios/cadastro.ejs
@@ -15,6 +15,14 @@
                     </button>
                 </div>
             <%}%>
+            <% if (message.length > 0) { %>
+                <div class="alert alert-danger alert-dismissible fade show">
+                    <%= message %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            <% } %>
             <div class="form-group">
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>">
