--- a/app/views/usuarios/login.ejs
+++ b/app/views/usuarios/login.ejs
@@ -14,6 +14,14 @@
                     </button>
                 </div>
             <%}%>
+            <% if (message.length > 0) { %>
+                <div class="alert alert-danger alert-dismissible fade show">
+                    <%= message %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            <% } %>
             <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
