--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -11,7 +11,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
                 <div>
-                    <a class="navbar-brand" href="#">Applytics</a>
+                    <a class="navbar-brand" href="/">Applytics</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -21,10 +21,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sign-up/Log-in</a>
+                                <a class="nav-link" href="/usuarios/cadastro">Sign-up</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/usuarios/login">Log-in</a>
                             </li>
                         </ul>
                     </div>
