Removido atributo chave da coleção de aplicativos para usar id como chav

--- a/app/views/dashboard/index.ejs
+++ b/app/views/dashboard/index.ejs
@@ -2,6 +2,8 @@
 
     <main role="main" class="container">
         <h1>Dashboard</h1>
+
+        <p>A chave SDK para realizar a integração com o app é: <strong><%= appID %></strong></p>
     </main>
 
 <%- include('../layout/_footer'); %>
