--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -1,7 +1,22 @@
 <%- include('../layout/_header'); %>
 
-    <main role="main" class="container">
-        <h1>TESTE</h1>
+    <main role="main" class="container index">
+        <h1>Applytics - Analytics para seu app de forma simples.</h1>
+
+        <section class="what-index">
+            <h2>O que é?</h2>
+            <p></p>
+        </section>
+
+        <section class="who-index">
+            <h2>Pra quem?</h2>
+            <p></p>
+        </section>
+
+        <section class="how-index">
+            <h2>Como utilizar?</h2>
+            <p></p>
+        </section>
     </main>
 
 <%- include('../layout/_footer'); %>
