--- a/app/views/dashboard/novoApp.ejs
+++ b/app/views/dashboard/novoApp.ejs
@@ -4,15 +4,28 @@
         <h1>Cadastrar novo app</h1>
 
         <form action="/dashboard" method="post">
+            <%if(validationErrors.length > 0) { %>
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <ul>
+                        <% for(var i=0; i<validationErrors.length; i++) {%>
+                            <li><%=validationErrors[i].msg%></li>
+                        <% } %>
+                    </ul>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            <%}%>
+
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" class="form-control">
+                <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite o nome do app" required>
             </div>
 
             <div class="form-group">
                 <label for="pais">País base</label>
-                <select name="pais" id="pais" class="form-control">
-                    <option value="0" selected disabled>Selecione o país</option>
+                <select name="pais" id="pais" class="form-control" required>
+                    <option value="" selected disabled>Selecione o país</option>
                     <% paises.forEach(pais => { %>
                         <option value="<%= pais.nome %>"><%= pais.nome %></option>
                     <% }); %>
@@ -21,8 +34,8 @@
 
             <div class="form-group">
                 <label for="categoria">Categoria</label>
-                <select name="categoria" id="categoria" class="form-control">
-                    <option value="0" selected disabled>Selecione a categoria</option>
+                <select name="categoria" id="categoria" class="form-control" required>
+                    <option value="" selected disabled>Selecione a categoria</option>
                     <% categorias.forEach(categoria => { %>
                         <option value="<%= categoria.nome %>"><%= categoria.nome %></option>
                     <% }); %>
