--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -13,17 +13,14 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
                 <div>
                     <a class="navbar-brand" href="/">Applytics</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                 </div>
                 
                 <div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
                             <% if (usuarioLogado === undefined) { %>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/usuarios/cadastro">Sign-up</a>
@@ -33,7 +30,15 @@
                                 </li>
                             <% } else { %>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Bem-vindo <%= usuarioLogado.local.nome %></a>
+                                    <div class="dropdown">
+                                        <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Bem-vindo <%= usuarioLogado.local.nome %></a>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                            <a class="dropdown-item" href="/dashboard">Dashboard</a>
+                                            <a class="dropdown-item" href="/usuarios/<%= usuarioLogado._id %>">Alterar perfil</a>
+                                            <a class="dropdown-item" href="/dashboard/novo">Cadastrar novo app</a>
+                                            <a class="dropdown-item" href="/usuarios/logout">Log-out</a>
+                                        </div>
+                                    </div>
                                 </li>
                             <% } %>
                         </ul>
