--- a/app/views/usuarios/cadastro.ejs
+++ b/app/views/usuarios/cadastro.ejs
@@ -1,46 +1,52 @@
 <%- include('../layout/_header'); %>
 
     <main role="main" class="container">
-        <h1>Cadastro</h1>
-        <form action="/usuarios" method="post">
-            <%if(validationErrors) { %>
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <ul>
-                        <% for(var i=0; i<validationErrors.length; i++) {%>
-                            <li><%=validationErrors[i].msg%></li>
-                        <% } %>
-                    </ul>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            <%}%>
-            <% if (message.length > 0) { %>
-                <div class="alert alert-danger alert-dismissible fade show">
-                    <%= message %>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            <% } %>
-            <div class="form-group">
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>">
+        <div class="card bg-light mb-3 mx-auto" style="max-width: 30rem; margin-top: 2rem;">
+            <div class="card-header text-center">
+                <h1>Cadastro</h1>
             </div>
-            <div class="form-group">
-                <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
+            <div class="card-body">
+                <form action="/usuarios" method="post">
+                    <%if(validationErrors) { %>
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <ul>
+                                <% for(var i=0; i<validationErrors.length; i++) {%>
+                                    <li><%=validationErrors[i].msg%></li>
+                                <% } %>
+                            </ul>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <%}%>
+                    <% if (message.length > 0) { %>
+                        <div class="alert alert-danger alert-dismissible fade show">
+                            <%= message %>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
+                    </div>
+                    <div class="form-group">
+                        <label for="senha">Senha</label>
+                        <input type="password" name="senha" id="senha" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="senha-confirm">Confirme a senha</label>
+                        <input type="password" name="senha-confirm" id="senha-confirm" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="senha">Senha</label>
-                <input type="password" name="senha" id="senha" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="senha-confirm">Confirme a senha</label>
-                <input type="password" name="senha-confirm" id="senha-confirm" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
-        </form>
+        </div>
     </main>
 
 <%- include('../layout/_footer'); %>
