--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -1,6 +1,16 @@
 <%- include('../layout/_header'); %>
 
     <main role="main" class="container index">
+
+        <%if (message != '') { %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <%= message %>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        <%}%>
+
         <h1>Applytics - Analytics para seu app de forma simples.</h1>
 
         <section class="what-index">
