--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header>
+        <header style="margin-bottom: 20px;">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
                 <div>
                     <a class="navbar-brand" href="/">Applytics</a>
