--- a/app/views/dashboard/index.ejs
+++ b/app/views/dashboard/index.ejs
@@ -13,16 +13,48 @@
 
         <h1>Dashboard</h1>
 
-        <% if (!dados.usuarios_totais) { %>
+        <% if (!dados.num_usuarios.totais.length) { %>
             <p>A chave SDK para realizar a integração com o app é: <strong><%= appID %></strong>.</p>
             <p>Integre o SDK no seu app e atualize essa página quando tiver usado pelo menos uma vez seu app para ver os dados.</p>
         <% } else { %>
-            <p>Total de usuários: <strong><%= dados.usuarios_totais %></strong></p>
-            <p>Usuários ativos nas ultimas 24h <strong><%= dados.usuarios_ativos_dia.length %></strong></p>
-            <p>Usuários ativos na última semana <strong><%= dados.usuarios_ativos_semana.length %></strong></p>
-            <p>Usuários ativos no último mês <strong><%= dados.usuarios_ativos_mes.length %></strong></p>
-            <p>Usuários ativos no último ano <strong><%= dados.usuarios_ativos_ano.length %></strong></p>
+            <p>Total de usuários: <strong><%= dados.num_usuarios.totais.length %></strong></p>
+            <p>Usuários ativos nas ultimas 24h <strong><%= dados.num_usuarios.dia.length %></strong></p>
+            <p>Usuários ativos na última semana <strong><%= dados.num_usuarios.semana.length %></strong></p>
+            <p>Usuários ativos no último mês <strong><%= dados.num_usuarios.mes.length %></strong></p>
+            <p>Usuários ativos no último ano <strong><%= dados.num_usuarios.ano.length %></strong></p>
+            <p>Total de usuários masculinos <strong><%= dados.num_usuarios.masculinos.length %></strong></p>
+            <p>Total de usuários femininos <strong><%= dados.num_usuarios.totais.length - dados.num_usuarios.masculinos.length %></strong></p>
             <% } %>
+            <canvas id="myChart" width="100" height="50"></canvas>
+            <script>
+                var ctx = document.getElementById("myChart").getContext('2d');
+                var chart = new Chart(ctx, {
+    // The type of chart we want to create
+    type: 'line',
+
+    // The data for our dataset
+    data: {
+        labels: ["Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho", "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"],
+        datasets: [{
+            label: "Usuários novos por mês",
+            backgroundColor: 'rgba(255, 99, 132, 0)',
+            borderColor: 'rgb(255, 99, 132)',
+            lineTension: 0,
+            data: [<%= dados.plot.novos %>],
+        },
+        {
+            label: "Usuários desistentes por mês",
+            backgroundColor: 'rgba(75, 192, 192, 0)',
+            borderColor: 'rgb(75, 192, 192)',
+            lineTension: 0,
+            data: [<%= dados.plot.velhos %>],
+        }]
+    },
+
+    // Configuration options go here
+    options: {}
+});
+            </script>
     </main>
 
 <%- include('../layout/_footer'); %>
