--- a/app/views/usuarios/cadastro.ejs
+++ b/app/views/usuarios/cadastro.ejs
@@ -29,19 +29,19 @@
                     <% } %>
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>">
+                        <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.nome %>" required autofocus>
                     </div>
                     <div class="form-group">
                         <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
+                        <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>" required>
                     </div>
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha" class="form-control">
+                        <input type="password" name="senha" id="senha" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="senha-confirm">Confirme a senha</label>
-                        <input type="password" name="senha-confirm" id="senha-confirm" class="form-control">
+                        <input type="password" name="senha-confirm" id="senha-confirm" class="form-control" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Cadastrar</button>
                 </form>
