--- a/app/views/usuarios/login.ejs
+++ b/app/views/usuarios/login.ejs
@@ -28,11 +28,11 @@
                     <% } %>
                     <div class="form-group">
                         <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>">
+                        <input type="email" name="email" id="email" class="form-control" value="<%= usuario.email %>" required autofocus>
                     </div>
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha" class="form-control">
+                        <input type="password" name="senha" id="senha" class="form-control" required>
                     </div>
                     <input type="submit" value="Entrar" class="btn btn-primary">
                 </form>
