--- a/app/views/usuarios/perfil.ejs
+++ b/app/views/usuarios/perfil.ejs
@@ -21,7 +21,7 @@
 
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.local.nome %>" required>
+                    <input type="text" name="nome" id="nome" class="form-control" value="<%= usuario.local.nome %>" required autofocus>
                 </div>
                 
                 <div class="form-group">
