--- a/app/views/dashboard/index.ejs
+++ b/app/views/dashboard/index.ejs
@@ -24,14 +24,22 @@
             <p>Usuários ativos no último ano <strong><%= dados.num_usuarios.ano.length %></strong></p>
             <p>Total de usuários masculinos <strong><%= dados.num_usuarios.masculinos.length %></strong></p>
             <p>Total de usuários femininos <strong><%= dados.num_usuarios.totais.length - dados.num_usuarios.masculinos.length %></strong></p>
-            <p>Tempo total de uso do app em segundos <strong><%= dados.tempo_total_sessoes[0].sum %></strong></p>
-            <p>Tempo médio de uso do app por usuário <strong><%= dados.tempo_total_sessoes[0].sum / dados.num_usuarios.totais.length %></strong></p>
+            <p>Tempo total de uso do app em segundos <strong><%= dados.tempo_total_sessoes[0].sum.toFixed(2) %>s</strong></p>
+            <p>Tempo médio de uso do app por usuário <strong><%= dados.media_tempo_total.toFixed(2) %>s</strong></p>
+            <p>Variância do tempo total de uso do app <strong><%= dados.variancia_tempo_total.toFixed(2) %>s</strong></p>
+            <p>Desvio padrão do tempo total de uso do app <strong><%= dados.desvio_tempo_total.toFixed(2) %>s</strong></p>
+            <p>Total monetário feito pelo app <strong>R$ <%= dados.total_gasto[0].sum.toFixed(2) %></strong></p>
+            <p>Média de gastos por usuários <strong>R$ <%= dados.media_gasto_total.toFixed(2) %></strong></p>
+            <p>Variância de gastos por usuários <strong>R$ <%= dados.variancia_gasto_total.toFixed(2) %></strong></p>
+            <p>Desvio padrão de gastos por usuários <strong>R$ <%= dados.desvio_gasto_total.toFixed(2) %></strong></p>
+            
             <div id="chartUsuarios" style="width:100%; height:400px;"></div>
             <div id="pieResolucoes" style="width:100%; height:400px;"></div>
             <div id="barTempoSessao" style="width:100%; height:400px;"></div>
             <div id="histTempoSessao" style="width:100%; height:400px;"></div>
             <div id="colIdades" style="width:100%; height:400px;"></div>
             <div id="mapaDist" style="width:100%; height:400px;"></div>
+            <div id="pieViewsAcessos" style="width:100%; height:400px;"></div>
             <script>
                 Highcharts.setOptions({
                     lang: {
@@ -233,7 +241,40 @@
                             enabled: true,
                             format: '{point.properties.postal}'
                         }
-                    }]
+                    }],
+                    credits: {
+                        enabled: false
+                    }
+                });
+
+                var myPieViewChart = Highcharts.chart('pieViewsAcessos', {
+                    chart: {
+                        type: 'pie'
+                    },
+                    title: {
+                        text: 'Distribuição de acessos de telas'
+                    },
+                    plotOptions: {
+                        pie: {
+                            allowPointSelect: true,
+                            cursor: 'pointer',
+                            dataLabels: {
+                                enabled: true,
+                                format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                                style: {
+                                    color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                                }
+                            }
+                        }
+                    },
+                    series: [{
+                        name: 'Usuários',
+                        colorByPoint: true,
+                        data: <%- JSON.stringify(dados.views) %>
+                    }],
+                    credits: {
+                        enabled: false
+                    }
                 });
             </script>
         <% } %>
