--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/test.css">
+        <link rel="stylesheet" href="/css/test.css">
+        <link rel="stylesheet" href="/css/tags-input.css">
         <script src="/js/main.js"></script>
         <title>Applytics</title>
     </head>
