--- a/app/views/dashboard/novoApp.ejs
+++ b/app/views/dashboard/novoApp.ejs
@@ -22,7 +22,7 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite o nome do app" required>
+                        <input type="text" name="nome" id="nome" class="form-control" value="<%= aplicativo.nome %>" placeholder="Digite o nome do app" required>
                     </div>
 
                     <div class="form-group">
@@ -30,7 +30,7 @@
                         <select name="pais" id="pais" class="form-control" required>
                             <option value="" selected disabled>Selecione o país</option>
                             <% paises.forEach(pais => { %>
-                                <option value="<%= pais.nome %>"><%= pais.nome %></option>
+                                <option value="<%= pais.nome %>" <%= aplicativo.pais == pais.nome ? 'selected' : '' %> ><%= pais.nome %></option>
                             <% }); %>
                         </select>
                     </div>
@@ -40,7 +40,7 @@
                         <select name="categoria" id="categoria" class="form-control" required>
                             <option value="" selected disabled>Selecione a categoria</option>
                             <% categorias.forEach(categoria => { %>
-                                <option value="<%= categoria.nome %>"><%= categoria.nome %></option>
+                                <option value="<%= categoria.nome %>" <%= aplicativo.categoria == categoria.nome ? 'selected' : '' %>><%= categoria.nome %></option>
                             <% }); %>
                         </select>
                     </div>
